--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -141,6 +141,7 @@
                     android:layout_marginTop="9dp"
                     android:background="@color/date"
                     android:text="@string/reset_pass"
+                    android:visibility="gone"
                     android:textAlignment="center"
                     android:textColor="@android:color/white" />
 
