--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,6 +203,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_marginRight="5dp"
+                android:padding="5dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/search"/>
         </LinearLayout>
