--- a/app/src/main/res/layout/activity_search_appointment.xml
+++ b/app/src/main/res/layout/activity_search_appointment.xml
@@ -89,8 +89,8 @@
                         android:layout_toEndOf="@+id/textView32"
                         android:layout_toRightOf="@+id/textView32"
                         android:layout_weight="1"
-                        android:hint="@string/email1"
-                        android:inputType="textPersonName"
+                        android:hint="@string/lastname"
+                        android:inputType="textCapSentences"
                         android:maxLength="45"
                         android:paddingRight="5dp"
                         android:singleLine="true"
@@ -230,7 +230,7 @@
         android:layout_width="match_parent"
         android:layout_weight=".4"
         android:layout_height="0dp"
-
+        android:id="@+id/search_result_lay"
         android:background="@color/list_back"
         android:orientation="vertical"
       >
