--- a/app/src/main/res/layout/activity_search_appointment.xml
+++ b/app/src/main/res/layout/activity_search_appointment.xml
@@ -13,8 +13,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".55"
+        android:layout_height="wrap_content"
         android:id="@+id/search_lay"
         android:layout_below="@+id/header"
         android:orientation="vertical"
@@ -23,7 +22,7 @@
         <RelativeLayout
             android:id="@+id/login_info"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingBottom="5dp">
 
             <TextView
@@ -43,21 +42,31 @@
                 android:orientation="vertical"
                 android:id="@+id/table_lay"
                 android:layout_below="@+id/tv_reset_password_title"
-                android:background="@drawable/rounded_corner"
-               >
+                android:background="@drawable/rounded_corner">
 
                 <LinearLayout
                     android:id="@+id/line1"
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_height="50dp"
-
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
                    >
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_last"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <EditText
+                            android:id="@+id/et_last_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/last"
+                            android:singleLine="true"/>
 
-                    <TextView
+                    </android.support.design.widget.TextInputLayout>
+
+               <!--     <TextView
                         android:id="@+id/textView"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:layout_alignBottom="@+id/et_email"
                         android:layout_alignParentLeft="true"
@@ -65,7 +74,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/tv_semi"
                         android:layout_toStartOf="@+id/tv_semi"
-                        android:layout_weight=".44"
+
                         android:gravity="left|center"
                         android:padding="5dp"
                         android:text="@string/last"
@@ -73,14 +82,14 @@
 
                     <TextView
                         android:id="@+id/tv_semi"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_above="@+id/cb_account"
                         android:layout_alignLeft="@+id/tv_semi2"
                         android:layout_alignParentTop="true"
                         android:layout_alignStart="@+id/tv_semi2"
                         android:layout_toLeftOf="@+id/tv_semi2"
-                        android:layout_weight=".01"
+
                         android:gravity="center"
                         android:text=":" />
 
@@ -91,31 +100,68 @@
                         android:layout_alignParentTop="true"
                         android:layout_toEndOf="@+id/textView32"
                         android:layout_toRightOf="@+id/textView32"
-                        android:layout_weight=".55"
+                        android:layout_weight="1"
                         android:hint="@string/lastname"
                         android:inputType="textCapSentences"
                         android:maxLength="45"
                         android:paddingRight="5dp"
                         android:singleLine="true"
-                        android:textSize="@dimen/font_size" />
+                        android:textSize="@dimen/font_size" />-->
                 </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="vertical"
 
-    android:layout_height="match_parent">
                 <LinearLayout
                     android:id="@+id/line2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
                     android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/line1"
-                   >
+                    android:layout_weight="1"
+                    android:layout_marginTop="-5dp">
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_date_birth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/et_date_birth"
+                           android:layout_width="155dp"
+                            android:singleLine="true"
+                            android:inputType="date"
+                            android:layout_height="match_parent"
+                            android:hint="Date Of Birth" />
 
 
+
+                    </android.support.design.widget.TextInputLayout>
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tv_or"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_below="@+id/line2"
+                        android:layout_weight=".1"
+                        android:gravity="center"
+                        android:text="@string/or"
+                        android:textSize="@dimen/sub_text"
+                        android:textStyle="bold" />
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_coniframtion_no"
+                        android:layout_width="wrap_content"
+                        android:layout_weight=".5"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/et_confirmation_no"
+                            android:layout_width="match_parent"
+                            android:singleLine="true"
+                            android:inputType="number"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/confirmation"
+                            android:layout_weight="1" />
+
+                    </android.support.design.widget.TextInputLayout>
+               <!--     <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:layout_alignBottom="@+id/et_email"
                         android:layout_alignParentLeft="true"
@@ -123,7 +169,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_toLeftOf="@+id/tv_semi"
                         android:layout_toStartOf="@+id/tv_semi"
-                        android:layout_weight=".44"
+
                         android:gravity="left|center"
                         android:padding="5dp"
                         android:text="@string/dob"
@@ -131,14 +177,14 @@
 
                     <TextView
                         android:id="@+id/tv_semi1"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_above="@+id/cb_account"
                         android:layout_alignLeft="@+id/tv_semi2"
                         android:layout_alignParentTop="true"
                         android:layout_alignStart="@+id/tv_semi2"
                         android:layout_toLeftOf="@+id/tv_semi2"
-                        android:layout_weight=".01"
+
                         android:gravity="center"
                         android:text=":" />
 
@@ -146,90 +192,43 @@
                         android:id="@+id/et_date_birth"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
-                        android:layout_weight=".55"
+                        android:layout_weight="1"
+                        android:layout_marginBottom="-5dp"
                         android:drawableRight="@android:drawable/ic_menu_my_calendar"
                         android:hint="@string/dob_date"
                         android:inputType="number"
                         android:maxLength="15"
-                        android:textSize="@dimen/font_size" />
+                        android:textSize="@dimen/font_size" />-->
                 </LinearLayout>
 
-                <TextView
+ <!--               <TextView
                     android:id="@+id/tv_or"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/line2"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:layout_marginBottom="-5dp"
                     android:text="@string/or"
                     android:textSize="@dimen/sub_text"
-                    android:textStyle="bold" />
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:id="@+id/line3"
+                    android:textStyle="bold" />-->
+                <Button
+                    android:id="@+id/bt_submit"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_below="@+id/tv_or"
-                    >
+                    android:layout_height="40dp"
+                    android:padding="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_below="@+id/table_lay"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/inside_blue"
+                    android:text="@string/search"
+                    android:background="@color/blue"
+                    android:textSize="@dimen/font_size" />
 
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_alignBottom="@+id/et_email"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_toLeftOf="@+id/tv_semi"
-                        android:layout_toStartOf="@+id/tv_semi"
-                        android:layout_weight=".45"
-                        android:gravity="left|center"
-                        android:padding="5dp"
-                        android:text="@string/confirmation_no"
-                        android:textSize="@dimen/sub_text" />
-
-                    <TextView
-                        android:id="@+id/tv_semi2"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_above="@+id/cb_account"
-                        android:layout_alignLeft="@+id/tv_semi2"
-                        android:layout_alignParentTop="true"
-                        android:layout_weight=".01"
-                        android:layout_alignStart="@+id/tv_semi2"
-                        android:layout_toLeftOf="@+id/tv_semi2"
-                        android:gravity="center"
-                        android:text=":" />
-
-                    <EditText
-                        android:id="@+id/et_confirmation_no"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight=".56"
-                        android:layout_marginBottom="-5dp"
-                        android:hint="@string/enter_confirmation_number"
-                        android:inputType="number"
-                        android:maxLength="15"
-                        android:textSize="@dimen/font_size" />
-                </LinearLayout>
-    <Button
-        android:id="@+id/bt_submit"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:padding="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_below="@+id/table_lay"
-        android:layout_marginRight="5dp"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/rounded_corner"
-        android:text="@string/search"
-        android:textColor="@color/blue"
-        android:textSize="@dimen/font_size" />
-</LinearLayout>
             </LinearLayout>
 
 
@@ -239,8 +238,9 @@
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight=".45"
-        android:layout_height="0dp"
+
+        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"
         android:id="@+id/search_result_lay"
         android:background="@color/list_back"
         android:orientation="vertical"
@@ -249,7 +249,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue">
+            android:background="@color/gray">
 
             <TextView
                 android:id="@+id/tv_count_appointments"
@@ -272,12 +272,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.02"
                 android:id="@+id/tv_search_and_title"
-
                 android:padding="5dp"
                 android:paddingBottom="5dp"
                 android:paddingTop="10dp"
                 android:text="@string/search_result"
-
+                android:background="@color/blue"
                 android:textColor="@color/inside_blue"
                 android:textSize="@dimen/font_size"
                 android:textStyle="bold" />
@@ -286,15 +285,13 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".005"
+            android:layout_height="1dp"
             android:background="@color/divider" />
 
         <ListView
             android:id="@+id/lv_upcomingAppointent"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.98"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent" />
 
         <LinearLayout
