--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,23 @@
     android:orientation="vertical"
     android:id="@+id/linearLayout"
     android:clickable="true"
-    android:weightSum="1"
+
     tools:context="com.effone.mobile.MainActivity">
 
     <include layout="@layout/header_for_home_page" />
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".62"
+        android:layout_weight=".6"
         android:orientation="horizontal">
 
         <!--  first section we are handling her-->
@@ -158,7 +166,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".38"
+        android:layout_weight=".4"
         android:background="@color/list_back"
         android:orientation="vertical"
         android:weightSum="1">
@@ -234,6 +242,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:gravity="center"
+                android:id="@+id/tv_appointment_result"
                 android:text="No appointment found,\n please book a new appointment."
                 android:textColor="@color/hostisMe"
                 android:textSize="@dimen/header" />
@@ -242,11 +251,8 @@
           />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".003"
-        android:background="@color/divider" />
 
+    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
